changed man png to fix button overlap

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button onclick="location.href='http://www.bccss.io'" type="button">Learn More <img src ="images/white-play-icon-png-6.png.webp"></button>
     </div>
     <img src = "images/snore.png" class="snore">
-    <img src = "images/graphic-sleep-symbol-bed-text-line-arm-logo-png-clipart-fotor-bg-remover-2024031512817.png" class="man">
+    <img src = "images/sleepyman.png" class="man">
 
 </div>
 
