--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTH Countdown Page</title>
+    <link rel="icon" href="images/hthreal.png">
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
